--- a/SuperPaginaWeb/Index.html
+++ b/SuperPaginaWeb/Index.html
@@ -12,12 +12,13 @@
   </head>
   <body>
     <div class="container-fluid">
-      <h1>Bienvenidos</h1>
+      <h1 id="titulo">Bienvenidos</h1>
       <div class="row" id="Text">
         <div class="col-12">
           <p>Me llamo Javier Villarejo Gayol, soy diseñador web y programador.</p>
           <p>Se programar en java, usar HTML, CSS, SQL para bases de datos, UML, GIT y podeis encontrar varios de mi proyectos en Github.</p>
         </div>
+
   </div>
   <div class="row">
     <div class="col-1">
@@ -28,6 +29,8 @@
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -38,6 +41,12 @@
     </div>
     <div class="carousel-item">
       <img src="Lucian-Solo-peligro.jpg" class="d-block w-100" alt="Lucian-Solo-peligro">
+    </div>
+    <div class="carousel-item">
+      <img src="Thresh-Solo-peligro.jpg" class="d-block w-100" alt="Thresh-Solo-peligro">
+    </div>
+    <div class="carousel-item">
+      <img src="Urgot-solo-peligro.jpg" class="d-block w-100" alt="Urgot-Solo-peligro">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
