--- a/SuperPaginaWeb/Index.html
+++ b/SuperPaginaWeb/Index.html
@@ -8,29 +8,32 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="SuperEstilos.css">
-    <title>Inicio</title>
+    <title>genial</title>
   </head>
   <body>
     <div class="container-fluid">
-      <h1 id="titulo">Bienvenidos</h1>
+        <div class="row">
+          <div class="col-12">
+      <h1 id="Inicio">Bienvenidos</h1>
+      </div>
+      </div>
       <div class="row" id="Text">
         <div class="col-12">
           <p>Me llamo Javier Villarejo Gayol, soy diseñador web y programador.</p>
           <p>Se programar en java, usar HTML, CSS, SQL para bases de datos, UML, GIT y podeis encontrar varios de mi proyectos en Github.</p>
         </div>
-
   </div>
   <div class="row">
     <div class="col-1">
       </div>
   <div class="col-10">
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <div id="carouselImagenes1" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+    <li data-target="#carouselImagenes1" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselImagenes1" data-slide-to="1"></li>
+    <li data-target="#carouselImagenes1" data-slide-to="2"></li>
+    <li data-target="#carouselImagenes1" data-slide-to="3"></li>
+    <li data-target="#carouselImagenes1" data-slide-to="4"></li>
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -49,11 +52,53 @@
       <img src="Urgot-solo-peligro.jpg" class="d-block w-100" alt="Urgot-Solo-peligro">
     </div>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+  <a class="carousel-control-prev" href="#carouselImagenes1" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+  <a class="carousel-control-next" href="#carouselImagenes1" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+</div>
+<div class="col-1">
+  </div>
+  </div>
+  <div class="row">
+    <div class="col-1">
+      </div>
+  <div class="col-10">
+  <div id="carouselImagenes2" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselImagenes2" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselImagenes2" data-slide-to="1"></li>
+    <li data-target="#carouselImagenes2" data-slide-to="2"></li>
+    <li data-target="#carouselImagenes2" data-slide-to="3"></li>
+    <li data-target="#carouselImagenes2" data-slide-to="4"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="Talon-espada-sempiterna.jpg" class="d-block w-100" alt="Talon-espada-sempiterna">
+    </div>
+    <div class="carousel-item">
+      <img src="Irelia-espada-dioses.jpg" class="d-block w-100" alt="Irelia-espada-dioses">
+    </div>
+    <div class="carousel-item">
+      <img src="Lucian-Solo-peligro.jpg" class="d-block w-100" alt="Lucian-Solo-peligro">
+    </div>
+    <div class="carousel-item">
+      <img src="Thresh-Solo-peligro.jpg" class="d-block w-100" alt="Thresh-Solo-peligro">
+    </div>
+    <div class="carousel-item">
+      <img src="Urgot-solo-peligro.jpg" class="d-block w-100" alt="Urgot-Solo-peligro">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselImagenes2" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselImagenes2" role="button" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
