--- a/SuperPaginaWeb/Index.html
+++ b/SuperPaginaWeb/Index.html
@@ -8,12 +8,15 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="SuperEstilos.css">
-    <title>genial</title>
+    <title>PaginaWeb-Javier-Villarejo</title>
   </head>
   <body>
     <div class="container-fluid">
         <div class="row">
-          <div class="col-12">
+          <div class="col-3">
+            <img src="foto-perfil.jpg" class="d-block w-100" alt="foto-perfil">
+            </div>
+          <div class="col-9">
       <h1 id="Inicio">Bienvenidos</h1>
       </div>
       </div>
