--- a/SuperPaginaWeb/Index.html
+++ b/SuperPaginaWeb/Index.html
@@ -71,7 +71,7 @@
   <div class="row">
     <div class="col-1">
       </div>
-  <div class="col-10">
+  <div class="col-10 d-none d-lg-flex">
   <div id="carouselImagenes2" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselImagenes2" data-slide-to="0" class="active"></li>
@@ -82,19 +82,19 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="Talon-espada-sempiterna.jpg" class="d-block w-100" alt="Talon-espada-sempiterna">
+      <img src="devil-may-cry-5.jpg" class="d-block w-100" alt="devil-may-cry-5">
     </div>
     <div class="carousel-item">
-      <img src="Irelia-espada-dioses.jpg" class="d-block w-100" alt="Irelia-espada-dioses">
+      <img src="kda-akali.jpg" class="d-block w-100" alt="kda-akali">
     </div>
     <div class="carousel-item">
-      <img src="Lucian-Solo-peligro.jpg" class="d-block w-100" alt="Lucian-Solo-peligro">
+      <img src="doom-eternal.jpg" class="d-block w-100" alt="doom-eternal">
     </div>
     <div class="carousel-item">
-      <img src="Thresh-Solo-peligro.jpg" class="d-block w-100" alt="Thresh-Solo-peligro">
+      <img src="diablo-immortal.jpg" class="d-block w-100" alt="diablo-immortal">
     </div>
     <div class="carousel-item">
-      <img src="Urgot-solo-peligro.jpg" class="d-block w-100" alt="Urgot-Solo-peligro">
+      <img src="smite-god.jpg" class="d-block w-100" alt="smite-god">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselImagenes2" role="button" data-slide="prev">
@@ -110,6 +110,30 @@
 <div class="col-1">
   </div>
 </div>
+<div class="row" id="links">
+<div class="col-3">
+  </div>
+  <div class="col-1">
+      <img src="pinterest.png" class="d-block w-100" alt="pinterest">
+      </div>
+      <div class="col-1">
+          <img src="skype.png" class="d-block w-100" alt="skype">
+      </div>
+      <div class="col-1">
+          <img src="google-plus.png" class="d-block w-100" alt="google-plus">
+      </div>
+      <div class="col-1">
+          <img src="youtube.png" class="d-block w-100" alt="youtube">
+      </div>
+      <div class="col-1">
+          <img src="github.png" class="d-block w-100" alt="github">
+      </div>
+      <div class="col-1">
+          <img src="whatsapp.png" class="d-block w-100" alt="whatsapp">
+      </div>
+      <div class="col-3">
+        </div>
+  </div>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
