--- a/SuperPaginaWeb/Index.html
+++ b/SuperPaginaWeb/Index.html
@@ -13,10 +13,10 @@
   <body>
     <div class="container-fluid">
         <div class="row">
-          <div class="col-3">
-            <img src="foto-perfil.jpg" class="d-block w-100" alt="foto-perfil">
+          <div class="d-none d-sm-block col-md-12 col-lg-3">
+            <img src="foto-perfil.jpg" class="img-thumbnail" alt="foto-perfil">
             </div>
-          <div class="col-9">
+          <div class="col-12 col-lg-9">
       <h1 id="Inicio">Bienvenidos</h1>
       </div>
       </div>
