--- a/SuperPaginaWeb/Index.html
+++ b/SuperPaginaWeb/Index.html
@@ -20,12 +20,20 @@
       <h1 id="Inicio">Bienvenidos</h1>
       </div>
       </div>
-      <div class="row" id="Text">
+      <div class="row" id="Text1">
         <div class="col-12">
           <p>Me llamo Javier Villarejo Gayol, soy diseñador web y programador.</p>
           <p>Se programar en java, usar HTML, CSS, SQL para bases de datos, UML, GIT y podeis encontrar varios de mi proyectos en Github.</p>
         </div>
-  </div>
+        </div>
+        <div class="row" id="Text2">
+        <div class="col-12">
+          <p>Nº.Contacto: 619264559</p>
+          <p>Correo: javiercito1995@hotmail.com o javiercito5895@gmail.com</p>
+          <p>Ultimo centro estudiado: Universidad la u-tad.</p>
+          <p>Trabajos realizados: Atualmente ninguno.</p>
+        </div>
+        </div>
   <div class="row">
     <div class="col-1">
       </div>
@@ -113,22 +121,22 @@
 <div class="row" id="links">
 <div class="col-3">
   </div>
-  <div class="col-1">
+  <div class="d-none d-sm-block col-1">
       <img src="pinterest.png" class="d-block w-100" alt="pinterest">
       </div>
-      <div class="col-1">
+      <div class="d-none d-sm-block col-1">
           <img src="skype.png" class="d-block w-100" alt="skype">
       </div>
-      <div class="col-1">
+      <div class="d-none d-sm-block col-1">
           <img src="google-plus.png" class="d-block w-100" alt="google-plus">
       </div>
-      <div class="col-1">
+      <div class="d-none d-sm-block col-1">
           <img src="youtube.png" class="d-block w-100" alt="youtube">
       </div>
-      <div class="col-1">
+      <div class="d-none d-sm-block col-1">
           <img src="github.png" class="d-block w-100" alt="github">
       </div>
-      <div class="col-1">
+      <div class="d-none d-sm-block col-1">
           <img src="whatsapp.png" class="d-block w-100" alt="whatsapp">
       </div>
       <div class="col-3">
