--- a/SuperPaginaWeb/Index.html
+++ b/SuperPaginaWeb/Index.html
@@ -121,26 +121,27 @@
 <div class="row" id="links">
 <div class="col-3">
   </div>
-  <div class="d-none d-sm-block col-1">
+  <div class="d-none d-sm-block col-1" id="links1">
       <img src="pinterest.png" class="d-block w-100" alt="pinterest">
       </div>
-      <div class="d-none d-sm-block col-1">
+      <div class="d-none d-sm-block col-1" id="links2">
           <img src="skype.png" class="d-block w-100" alt="skype">
       </div>
-      <div class="d-none d-sm-block col-1">
+      <div class="d-none d-sm-block col-1" id="links3">
           <img src="google-plus.png" class="d-block w-100" alt="google-plus">
       </div>
-      <div class="d-none d-sm-block col-1">
+      <div class="d-none d-sm-block col-1" id="links4">
           <img src="youtube.png" class="d-block w-100" alt="youtube">
       </div>
-      <div class="d-none d-sm-block col-1">
-          <img src="github.png" class="d-block w-100" alt="github">
+      <div class="d-none d-sm-block col-1" id="links5">
+          <a href="https://github.com/Restivejuvi"><img src="github.png" class="d-block w-100" alt="github"></a>
       </div>
-      <div class="d-none d-sm-block col-1">
+      <div class="d-none d-sm-block col-1" id="links6">
           <img src="whatsapp.png" class="d-block w-100" alt="whatsapp">
       </div>
       <div class="col-3">
         </div>
+  </div>
   </div>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
