--- a/SuperPaginaWeb/Index.html
+++ b/SuperPaginaWeb/Index.html
@@ -122,22 +122,22 @@
 <div class="col-3">
   </div>
   <div class="d-none d-sm-block col-1" id="links1">
-      <img src="pinterest.png" class="d-block w-100" alt="pinterest">
+      <a href="https://www.pinterest.es/Restivejuvi/"><img src="pinterest.png" class="d-block w-100" alt="pinterest"></a>
       </div>
       <div class="d-none d-sm-block col-1" id="links2">
-          <img src="skype.png" class="d-block w-100" alt="skype">
+          <a href="https://www.skype.com/es/"><img src="skype.png" class="d-block w-100" alt="skype"></a>
       </div>
       <div class="d-none d-sm-block col-1" id="links3">
-          <img src="google-plus.png" class="d-block w-100" alt="google-plus">
+          <a href="https://plus.google.com/u/0/112159692407997765649?tab=rX"><img src="google-plus.png" class="d-block w-100" alt="google-plus"></a>
       </div>
       <div class="d-none d-sm-block col-1" id="links4">
-          <img src="youtube.png" class="d-block w-100" alt="youtube">
+          <a href="https://www.youtube.com/channel/UCXOr0fOVKJ43Mn0JPluv6MA?view_as=subscriber"><img src="youtube.png" class="d-block w-100" alt="youtube"></a>
       </div>
       <div class="d-none d-sm-block col-1" id="links5">
           <a href="https://github.com/Restivejuvi"><img src="github.png" class="d-block w-100" alt="github"></a>
       </div>
       <div class="d-none d-sm-block col-1" id="links6">
-          <img src="whatsapp.png" class="d-block w-100" alt="whatsapp">
+          <a href="https://web.whatsapp.com/"><img src="whatsapp.png" class="d-block w-100" alt="whatsapp"></a>
       </div>
       <div class="col-3">
         </div>
