--- a/SuperPaginaWeb/Index.html
+++ b/SuperPaginaWeb/Index.html
@@ -49,18 +49,38 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="Talon-espada-sempiterna.jpg" class="d-block w-100" alt="Talon-espada-sempiterna">
+      <div class="carousel-caption d-none d-sm-block">
+                      <h3>Proyectos:</h3>
+                      <p>Desafios acepta el reto....(Inclusion más adelante, imagen de mientras)</p>
+                  </div>
     </div>
     <div class="carousel-item">
       <img src="Irelia-espada-dioses.jpg" class="d-block w-100" alt="Irelia-espada-dioses">
+      <div class="carousel-caption d-none d-sm-block">
+                      <h3>Proyectos:</h3>
+                      <p>Programa java....(Inclusion más adelante, imagen de mientras)</p>
+                  </div>
     </div>
     <div class="carousel-item">
       <img src="Lucian-Solo-peligro.jpg" class="d-block w-100" alt="Lucian-Solo-peligro">
+      <div class="carousel-caption d-none d-sm-block">
+                      <h3>Proyectos:</h3>
+                      <p>HTML....(Inclusion más adelante, imagen de mientras)</p>
+                  </div>
     </div>
     <div class="carousel-item">
       <img src="Thresh-Solo-peligro.jpg" class="d-block w-100" alt="Thresh-Solo-peligro">
+      <div class="carousel-caption d-none d-sm-block">
+                      <h3>Proyectos:</h3>
+                      <p>CSS....(Inclusion más adelante, imagen de mientras)</p>
+                  </div>
     </div>
     <div class="carousel-item">
       <img src="Urgot-solo-peligro.jpg" class="d-block w-100" alt="Urgot-Solo-peligro">
+      <div class="carousel-caption d-none d-sm-block">
+                      <h3>Proyectos:</h3>
+                      <p>Proycto integrador....(Inclusion más adelante, imagen de mientras)</p>
+                  </div>
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselImagenes1" role="button" data-slide="prev">
@@ -91,18 +111,38 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="devil-may-cry-5.jpg" class="d-block w-100" alt="devil-may-cry-5">
+      <div class="carousel-caption d-none d-sm-block">
+                      <h3>Trabajos:</h3>
+                      <p>Dibujos y animaciones....(Inclusion más adelante, imagen de mientras)</p>
+                  </div>
     </div>
     <div class="carousel-item">
       <img src="kda-akali.jpg" class="d-block w-100" alt="kda-akali">
+      <div class="carousel-caption d-none d-sm-block">
+                      <h3>Trabajos:</h3>
+                      <p>Otras paginas web....(Inclusion más adelante, imagen de mientras)</p>
+                  </div>
     </div>
     <div class="carousel-item">
       <img src="doom-eternal.jpg" class="d-block w-100" alt="doom-eternal">
+      <div class="carousel-caption d-none d-sm-block">
+                      <h3>Trabajos:</h3>
+                      <p>Videojuegos....(Inclusion más adelante, imagen de mientras)</p>
+                  </div>
     </div>
     <div class="carousel-item">
       <img src="diablo-immortal.jpg" class="d-block w-100" alt="diablo-immortal">
+      <div class="carousel-caption d-none d-sm-block">
+                      <h3>Trabajos:</h3>
+                      <p>Aplicaciones....(Inclusion más adelante, imagen de mientras)</p>
+                  </div>
     </div>
     <div class="carousel-item">
       <img src="smite-god.jpg" class="d-block w-100" alt="smite-god">
+      <div class="carousel-caption d-none d-sm-block">
+                      <h3>Trabajos:</h3>
+                      <p>Robotica....(Inclusion más adelante, imagen de mientras)</p>
+                  </div>
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselImagenes2" role="button" data-slide="prev">
